[Refactor] 코드 리뷰 후 ImageRedisService 리팩토링